@@ -3,6 +3,7 @@ package ch.jalu.wordeval;
 import ch.jalu.wordeval.appdata.AppData;
 import ch.jalu.wordeval.dictionary.Dictionary;
 import ch.jalu.wordeval.dictionary.Word;
+import ch.jalu.wordeval.evaluators.export.ExportService;
 import ch.jalu.wordeval.evaluators.processing.EvaluatorInitializer;
 import ch.jalu.wordeval.evaluators.processing.EvaluatorProcessor;
 import ch.jalu.wordeval.language.Language;
@@ -11,8 +12,8 @@ import ch.jalu.wordeval.util.TimeLogger;
 import com.google.common.collect.ImmutableMap;
 import lombok.extern.log4j.Log4j2;
 
-import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 import java.util.Map;
 
 /**
@@ -34,7 +35,7 @@ public final class WordEvalMain {
    */
   public static void main(String[] args) {
     // All codes: Dictionary.getAllCodes()
-    Iterable<String> codes = Arrays.asList("af", "en-us", "fr");
+    List<String> codes = List.of("eu", "en-us", "fr");
 
     WordEvalMain main = new WordEvalMain();
     for (String code : codes) {
@@ -73,7 +74,8 @@ public final class WordEvalMain {
         "words", String.valueOf(allWords.size()));
     timeLogger.lap("processed dictionary");
 
-    // TODO ExportService.exportToFile(evaluators, "export/" + code + ".json", metaInfo);
+    ExportService exportService = new ExportService();
+    exportService.export(language, evaluatorProcessor.streamThroughAllEvaluators());
     timeLogger.lap("finished export");
     timeLogger.logWithOverallTime("Finished language '" + code + "'");
   }
