@@ -6,7 +6,7 @@ import ch.jalu.wordeval.language.Language;
 import lombok.Getter;
 import lombok.extern.log4j.Log4j2;
 import org.reflections.Reflections;
-import org.reflections.scanners.SubTypesScanner;
+import org.reflections.scanners.Scanners;
 
 import java.lang.reflect.Constructor;
 import java.lang.reflect.InvocationTargetException;
@@ -29,9 +29,9 @@ public class EvaluatorInitializer {
   private final Locale[] locale;
 
   @Getter
-  private final List<AllWordsEvaluator<?>> allWordsEvaluators = new ArrayList<>();
+  private final List<AllWordsEvaluator> allWordsEvaluators = new ArrayList<>();
   @Getter
-  private final List<PostEvaluator<?>> postEvaluators = new ArrayList<>();
+  private final List<PostEvaluator> postEvaluators = new ArrayList<>();
 
   /**
    * Constructor.
@@ -52,17 +52,18 @@ public class EvaluatorInitializer {
    * Creates all possible evaluators from the evaluator package, {@link #EVALUATOR_PACKAGE}.
    */
   private void createAllEvaluators() {
-    Reflections reflections = new Reflections(EVALUATOR_PACKAGE, new SubTypesScanner(false));
+    Reflections reflections = new Reflections(EVALUATOR_PACKAGE, Scanners.SubTypes);
 
     reflections.getSubTypesOf(AllWordsEvaluator.class).stream()
       .filter(this::isInstantiableClass)
-      .forEach(clz -> createObjectsAndSaveToList(clz, (List) allWordsEvaluators));
+      .forEach(clz -> createObjectsAndSaveToList(clz, allWordsEvaluators));
 
     reflections.getSubTypesOf(PostEvaluator.class).stream()
       .filter(this::isInstantiableClass)
-      .forEach(clz -> createObjectsAndSaveToList(clz, (List) postEvaluators));
+      .forEach(clz -> createObjectsAndSaveToList(clz, postEvaluators));
   }
 
+  @SuppressWarnings("unchecked")
   private <T> void createObjectsAndSaveToList(Class<T> clazz, List<? super T> list) {
     log.trace("Creating instances of class '{}'", clazz.getSimpleName());
     Constructor<T> constructor = (Constructor<T>) clazz.getDeclaredConstructors()[0];
@@ -74,7 +75,7 @@ public class EvaluatorInitializer {
     if (unresolvedDependencies.isEmpty()) {
       instancesList.add(newInstance(constructor, resolvedDependencies));
     } else {
-      Class<?> dependencyToResolve = unresolvedDependencies.remove(0);
+      Class<?> dependencyToResolve = unresolvedDependencies.removeFirst();
       Object[] resolvedDependencyValues = resolveDependency(dependencyToResolve);
       for (Object curDependency : resolvedDependencyValues) {
         // Copy lists so each call has its own copy
